<resources>
    <string name="app_name" translatable="false">Lottery Master Pro</string>

    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="support_email" translatable="false">clist.abd@gmail.com</string>
    <string name="dear" translatable="false">DEAR</string>
    <string name="nagaland_state" translatable="false">Nagaland State Lotteries</string>
    <string name="copied_successfully" translatable="false">copied successfully.</string>
    <string name="result_not_publish_title" translatable="false">রেজাল্ট এর টাইম / परिणाम समय / Result Time</string>
    <string name="result_not_publish_morning_time" translatable="false">01:15pm</string>
    <string name="result_not_publish_morning" translatable="false">&#160; (Morning)</string>
    <string name="result_not_publish_day_time" translatable="false">04:15pm</string>
    <string name="result_not_publish_day" translatable="false">&#160; (Day)</string>
    <string name="result_not_publish_night_time" translatable="false">08:15pm</string>
    <string name="result_not_publish_night" translatable="false">&#160; (Night)</string>
    <string name="result_not_publish_bottom_text" translatable="false">অনুগ্রহ করে অপেক্ষা করুন \n कृपया प्रतीक्षा कीजिये \n Please Wait</string>
    <string name="official_gov" translatable="false">Please check the results with relevent Official Government Gazatte</string>
    <string name="submit" translatable="false">Submit</string>


    <string name="search_number">Pick a ticket</string>
    <string name="today_result">Today Result</string>
    <string name="yesterday_result">Yesterday Result</string>
    <string name="yesterday_and_pre">Yesterday &amp; Previous</string>
    <string name="old_result">Old Result</string>
    <string name="special_or_bumper">SPL or Bumper</string>
    <string name="winning_number">Winning Numbers</string>
    <string name="support_email_subject">User Query About Lottery Sambad Pro App</string>
    <string name="support_email_message">Please write your message here...</string>
    <string name="morning_time">Noon 1 PM</string>
    <string name="evening_time">Afternoon 4 PM</string>
    <string name="night_time">Night 8 PM</string>
    <string name="bumper_night_time">Bumper Night 8 PM</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="change_language">Change Language</string>
    <string name="share">Share</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="more_apps">More Apps</string>
    <string name="last_four_degit_of_lottery_number">last 4 digit of lottery number</string>
    <string name="common_number">The numbers that play more</string>
    <string name="middle_number">Middle Number</string>
    <string name="found_new_version">Found New Version</string>
    <string name="app_update_message">Your app is not updated, Please update to latest version.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="search_number_description">The ticket that you will buy, when the ticket was last played, search it here.</string>
    <string name="need_to_accept_permission">You need to accept the permission to use this option.</string>
    <string name="view_details">View Details</string>
    <string name="choose_one">Choose one</string>
    <string name="input_your_phone_number_title">Input your phone number to below box and press submit button</string>
    <string name="input_phone_number">Input phone number</string>
    <string name="active_premium_service">Active premium service</string>
    <string name="premium_active_message">To use this service, please contact with support center.</string>


    <string name="not_implemented_message">Please wait. This option is not implemented yet.</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>