<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity"
    tools:openDrawer="start">
    <me.ibrahimsn.particle.ParticleView
        android:id="@+id/particleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:particleCount="60"
        app:particleMinRadius="5"
        app:particleMaxRadius="15"
        app:particlesBackgroundColor="@color/purple_700"
        app:particleColor="@color/neon_color_start"
        app:particleLineColor="@color/neon_color_start"
        app:particleLinesEnabled="true" />
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/tutorialImageView"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="@dimen/_150sdp"
                app:layout_constraintTop_toTopOf="parent" />

            <com.smb.glowbutton.NeonButton
                android:id="@+id/lottery_number_check"
                style="@style/MyNeonButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                app:nb_drawableStart="@drawable/ic_search"
                app:nb_text="@string/lottery_result_check"
                app:layout_constraintTop_toBottomOf="@+id/tutorialImageView" />

            <LinearLayout
                style="@style/HomeButtonParentLayoutStyle"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.smb.glowbutton.NeonButton
                    android:id="@+id/todayResultCardView"
                    style="@style/MyNeonButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:nb_text="@string/today_result"/>

                <com.smb.glowbutton.NeonButton
                    android:id="@+id/yesterDayResultCardView"
                    style="@style/MyNeonButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:nb_text="@string/yesterday_result"/>
            </LinearLayout>

            <LinearLayout
                style="@style/HomeButtonParentLayoutStyle"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.smb.glowbutton.NeonButton
                    android:id="@+id/yesterDayVsPreResultCardView"
                    style="@style/MyNeonButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:nb_text="@string/yesterday_and_pre"/>

                <com.smb.glowbutton.NeonButton
                    android:id="@+id/oldResultCardView"
                    style="@style/MyNeonButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:nb_text="@string/old_result"/>
            </LinearLayout>

            <LinearLayout
                style="@style/HomeButtonParentLayoutStyle"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.smb.glowbutton.NeonButton
                    android:id="@+id/specialOrBumperResultCardView"
                    style="@style/MyNeonButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:nb_text="@string/special_or_bumper"/>

                <com.smb.glowbutton.NeonButton
                    android:id="@+id/winingNumberCardView"
                    style="@style/MyNeonButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:nb_text="@string/winning_number"/>
            </LinearLayout>
            <LinearLayout
                style="@style/HomeButtonParentLayoutStyle"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.smb.glowbutton.NeonButton
                    android:id="@+id/commonNumberButton"
                    style="@style/MyNeonButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:nb_text="@string/common_number"/>

                <com.smb.glowbutton.NeonButton
                    android:id="@+id/privacyPolicyButton"
                    style="@style/MyNeonButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:nb_text="@string/privacy_policy"/>
            </LinearLayout>
        </LinearLayout>


    </ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:itemTextColor="@color/white"
        app:itemIconTint="@color/white"
        android:background="@color/purple_700"
        app:headerLayout="@layout/heder"
        app:menu="@menu/iconmenu" />


</androidx.drawerlayout.widget.DrawerLayout>