<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GridLayout.today_result.TodayResultActivity">
    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            style="@style/MyCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                style="@style/CardChildLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/CardChildTextViewStyle"
                    android:text="@string/morning_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            style="@style/MyCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                style="@style/CardChildLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/CardChildTextViewStyle"
                    android:text="@string/evening_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            style="@style/MyCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                style="@style/CardChildLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/CardChildTextViewStyle"
                    android:text="@string/night_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            style="@style/MyCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                style="@style/CardChildLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/CardChildTextViewStyle"
                    android:text="@string/bumper_night_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>